fix center align mypage.html

--- a/untitled/css/mp.css
+++ b/untitled/css/mp.css
@@ -15,7 +15,7 @@ main{
     color: white;
     text-align: center;
     padding-top: 80px;
-    width: 100%;
+    width: 960px;
     margin: 0 auto;
 }
 .menu{
